# c_cpp_pkg_template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Doxyfile.in  README.md  index.html  mkdocs.yaml  sitemap.xml
.github/workflows/: build-format-lint-ci.yml  build_format_lint.yml  ci.yml  format_and_lint_ci.yml  mkdocs_ci_gh_pages.yml  mkdocs_gh_pages_deploy.yml
api_html/: README_8md.html  annotated.html  annotated_dup.js  classTemp-members.html  classTemp.html  classTemp.js  classes.html  dir_1ff95392bc4e65547c61a42698fda530.html  dir_1ff95392bc4e65547c61a42698fda530.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dba4455fb52bf19d3718f6b20343e827.html  dir_dba4455fb52bf19d3718f6b20343e827.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  index.js  navtreedata.js  navtreeindex0.js  temp_8hpp.html  temp_8hpp.js  temp_8hpp_source.html  temp__ex_8c.html  temp__ex_8c.js  temp__ex_8c_source.html  template_8c.html  template_8c.js  template_8c_source.html  template_8h.html  template_8h.js  template_8h_source.html
api_html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js
docs/: index.md
docs/styles/: doxy.css
include/PackageName/: temp.hpp  template.h
include/ProjectName/: temp.hpp  template.h
search/: search_index.json
src/: CMakeLists.txt  template.c
src/example/: CMakeLists.txt  temp_ex.c
styles/: doxy_header.html
test/: CMakeLists.txt  main_test.c  temp_test.c
